# ocf-optical-flow-tvl1

./: .copier-answers.yml  README.md  model.py  pyproject.toml  validate-baskerville.sh  validate_config.yml
src/ocf_optical_flow_tvl1/: hello.py
