[project]
name = "ocf-optical-flow-tvl1"
authors = [
    {name = "Alan Turing Institute", email = "clouds@turing.ac.uk"},
]
version = "0.1.0"
description = "Implementation of OpticalFlowTVL1."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloudcasting @ git+https://github.com/alan-turing-institute/cloudcasting.git@v0.4.0",
    "pandas", 
    "dask",
    "xarray",
    "cartopy",
    "ocf_blosc2",
    "zarr",
    "fsspec",
    "gcsfs",
    "opencv-contrib-python-headless",
    "scikit-image",
]
